-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
6.5.3, 6.6.0
-
None
-
macOS 14.1.1
-
-
e8943f541 (dev), 951c857b8 (6.6), d3d16bc4a (tqtc/lts-6.5)
Simple usage of, for example, a Button control with Imagine style provokes qt.qpa.fonts warning on macOS.
qt.qpa.fonts: Populating font family aliases took 78 ms. Replace uses of missing font family "Open Sans" with one that exists to avoid this cost.
Sample code:
import QtQuick import QtQuick.Controls.Imagine Window { visible: true Button { text: 'Button' } }
- relates to
-
QTBUG-83155 Roboto font used in Material style slows down startup time
-
- Closed
-