QQuickImagineTheme: check if "Open Sans" font family is available

Check if "Open Sans" font family is available before using it as
a default font family for Imagine style. This prevents us from
missing family fallback lookups, which can be slow.

Fixes: QTBUG-119298
Pick-to: 6.5
Change-Id: Icf6e9d6bbe00ec0b014de24a8fdee73895ddc6e7
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
(cherry picked from commit e8943f54172d6112ea3cad7cb6b9645c944cd021)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>